# DocumentExTractr

./: Readme.md
api/: .env.local  .gitignore  README.md  app.py  config.py  pyproject.toml
api/model/: __init__.py  dspy_signatures.py
api/services/: bert_classifier.py  cnn_classifier.py  lm_extractor.py
experiments/: .gitignore  readme.md  requirements.txt
experiments/notebooks/: CNN_document_classifier-2.ipynb  CNN_document_classifier.ipynb  bertbased_document_classifier_finetuned.ipynb  data_extractor.ipynb  document_classifier.ipynb  dspy.ipynb  text_extract.ipynb
frontend/: .gitignore  README.md  app.py  pyproject.toml
ocr/: .gitignore  app.py  helper.py  ocr.py  readme.md  requirements.txt
