[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=2.6.27",
    "fastapi[standard]>=0.115.13",
    "httpx>=0.28.1",
    "pydantic-settings>=2.10.0",
    "pytest>=8.4.1",
    "spacy>=3.8.7",
    "tensorflow>=2.19.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
